add alert to js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
         document.getElementById("sendData").addEventListener("click", () => {
             tg.sendData(JSON.stringify({ message: "Привет из Web App!" }));  // Отправка данных боту
+            alert("OK");
         });
     </script>
 </body>
