--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram Web App</title>
+    <title>tsum web app bot</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
 
         document.getElementById("sendData").addEventListener("click", async () => {
             await tg.sendData(JSON.stringify({ message: "Привет из Web App!" }));
-            alert("OK 2");
+            alert("OK 3");
         });
     </script>
 </body>
